--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySql": "Server=localhost;Database=minimal_api;Uid=root;Pwd=root;"
+    "MySql": "Server=localhost;Database=minimal_api;Uid=root;Pwd=@mysql502456t;"
   },
   "Jwt": "minimal-api-alunos-vamos_lá"
 }
